[gd_scene load_steps=7 format=2]

[ext_resource path="res://Script/scene_1.gd" type="Script" id=1]
[ext_resource path="res://Font/OpenSans-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 989.507 ]
}

[node name="back" type="Button" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 43.0
margin_bottom = 23.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Back "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="go_to_scene_2" type="Button" parent="."]
margin_left = 40.0
margin_top = 540.0
margin_right = 88.0
margin_bottom = 566.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Scene 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="go_to_scene_3" type="Button" parent="."]
margin_left = 148.0
margin_top = 540.0
margin_right = 216.0
margin_bottom = 566.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Scene 3"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="back" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="go_to_scene_2" to="." method="_on_go_to_scene_2_pressed"]
[connection signal="pressed" from="go_to_scene_3" to="." method="_on_go_to_scene_3_pressed"]
